Derive Windows file "details" resource values from PluginProperties

--- a/meshtex.vcproj
+++ b/meshtex.vcproj
@@ -211,6 +211,10 @@
 						RelativePath=".\RefCounted.h"
 						>
 					</File>
+					<File
+						RelativePath=".\UtilityMacros.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="plugin"
