include "beta" tag and git commit hash in version
I may be making a compiled version of this public, and maybe as a
"beta", so it's handy to get more specific about exactly what code has
gone into a given DLL.  This change includes the "beta" label as well as
the current git commit hash in the file and product version strings that
are part of the DLL's info resource.

--- a/meshtex.vcproj
+++ b/meshtex.vcproj
@@ -26,6 +26,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Capturing git commit hash (if known)"
+				CommandLine="set GitCommit=n/a&#x0D;&#x0A;for /f &quot;delims=&quot; %%a in (&apos;&quot;$(GitDir)\git&quot; rev-parse --short HEAD 2^&gt;NUL&apos;) do (set GitCommit=%%a)&#x0D;&#x0A;echo #define CODE_ID %GitCommit% &gt; &quot;$(ProjectDir)CodeVersion.h&quot;&#x0D;&#x0A;exit /b 0&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -112,6 +114,9 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Capturing git commit hash (if known)"
+				CommandLine="set GitCommit=n/a&#x0D;&#x0A;for /f &quot;delims=&quot; %%a in (&apos;&quot;$(GitDir)\git&quot; rev-parse --short HEAD 2^&gt;NUL&apos;) do (set GitCommit=%%a)&#x0D;&#x0A;echo #define CODE_ID %GitCommit% &gt; &quot;$(ProjectDir)CodeVersion.h&quot;&#x0D;&#x0A;exit /b 0&#x0D;&#x0A;"
+				ExcludedFromBuild="false"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
